--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -65,9 +65,9 @@
         </div>
       </div>
 
-      <div class="layout-content sticky bottom-0 z-10 o-navigation-spacing">
-        <div class="p-2 tablet:p-3 text-end">
-          <a class="btn btn-secondary bg-scale-1" href="#content">Back to top</a>
+      <div class="layout-content sticky z-10 o-navigation-feedback-spacing-bottom">
+        <div class="px-2 pt-2 text-end">
+          <a class="btn btn-small tablet:btn btn-secondary bg-scale-1" href="#content">Back to top</a>
         </div>
       </div>
     </div>
