--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -1,4 +1,4 @@
-<nav aria-label="Primary Navigation" class="o-navigation bg-scale-2 o-navigation-fixed" role="navigation">
+<nav aria-label="Navigation" class="o-navigation bg-scale-2 o-navigation-fixed" role="navigation" data-js="navigation">
   <a class="o-navigation__logo o-navigation__menu-item bg-scale-1 tablet:bg-transparent" href="{{site.url}}">
     <span class="sr-only">Working N Y C</span>
 
